src/css/map.css
@import url("https://www.york.ac.uk/static/1.5.6/css/styles.min.css");

html,
body {
  height: 100%;
  margin:0;
  padding:0;
  width: 100%;
  overflow:hidden;
}


.wrapper {
  display:flex;
  flex-direction: column;
  justify-content: flex-start;
  height:calc(100% - 3.5rem); /* for IE 10 & 11 benefit don't use min-height */
  position: relative;
}
@media (min-width: 768px) {
  .wrapper {
    height: calc(100% - 5.5rem);  /* for IE 10 & 11 benefit don't use min-height */
  }
}
@media (min-width: 923px) {
  .wrapper {
    height: calc(100% - 3.8rem);  /* for IE 10 & 11 benefit don't use min-height */
  }
}

.map {
  flex: 1 1 auto;
}

/*prevent safari styling on text input*/
.c-form__input, input[type=text] {
  -webkit-appearance: none !important;
  border-radius: 0 !important;
}


/* to aid with search icon inside search input */
.c-form__input {
  padding-left: 2rem;
}
.c-icon--search {
  color: #a23479;
  font-size: 1.125rem;
  left: .5rem;
  position: absolute;
  top: .5rem;
}



/*streetview info caption*/
.gm-iv-address {
    height: 56px !important;
    min-width: 200px !important;
}

.c-map-header {
    border-bottom: 2px solid #f9f9f9;
    background-color: #0f3d4c;
    height: 5rem;
    padding: 0 .75rem 0 .5rem;
    width: 100%;
}

.c-map-header__title {
    color: #fdfdfd;
    font-size: 2rem;
    line-height: normal;
    margin: .5rem .25rem 0 .25rem;
}

.c-map-header .c-utility-nav__list {
  line-height: normal;
  margin: 0 .25rem;
  text-align:left;
}
.c-map-header .c-utility-nav__item {
 line-height: normal;
 font-size: 0.8rem;
}
.c-map-header .c-utility-nav__link {
  line-height: normal;
  color:#fff;
}
.c-map-header .c-utility-nav__item:first-of-type .c-utility-nav__link {
  line-height: normal;
  padding-left:0;
}

@media (max-width: 767px) {
  .c-map-header .c-utility-nav {
    display:none;
  }
}
.footer {
  bottom: 0;
  border-top: 2px solid #f9f9f9;
  background-color: #fff;
  min-height: 3.5rem;
  position: fixed;
  padding: 0;
  width: 100%;
}
@media (min-width: 768px) {
  .footer {
    min-height:5.5rem;
  }
}
@media (max-width: 767px) {
  .panel {
    max-height:0;
    transition:max-height 0.4s;
  }
  .panel.is-open {
    max-height:100vh;
  }
}
@media (min-width: 923px) {
  .footer {
    min-height:3.5rem;
  }
}

.bar {
  border-bottom: 1px solid #26505d;
  background-color: #0f3d4c;
  line-height: 1.5;
  padding: .25em;
  text-align: center;
}
.bar a {
  display: block;
  height: 100%;
  color: #fff;
  text-decoration: none;
}

.c-btn-group {
    margin: 0;
    padding: 0;
}

.c-btn {
    margin: 0;
    padding: 0;
}


.gm-style-iw {
    padding: .5em;
    width: 200px !important;
    height: 90px !important;
}

.gm-style-iw p {
  margin: 0;
}


.control-div-feedback {
    z-index: 0;
    position: absolute;
    left: 0;
    top: 0;
}

.control-div-centre {
    z-index: 0;
    position: absolute;
    right: 0;
    top: 0;
}



.control-campus-div--campus-buttons {
    background-color:rgba(240,242,233,0.8);
    border-radius: 0.4em;
    display: block;
    margin: .5rem;
    padding:  .25rem  0 .25rem .35rem;
}

.control-campus-div--campus-buttons p {
    font-size: .7rem;
    font-weight: bold;
    margin: 0;
    padding:0;
}

@media (max-width: 767px){
    .control-campus-div--campus-buttons {
        display: none;
    }
    .control-campus-div {
        margin-right: .75rem;
    }
    .c-map-header {
        height: 4rem;

    }
}

.control-ui{
  background-color:#fff;
  border-radius: 0.4em;
  cursor: pointer;
  font-size: 12px;
  height: 1.75rem;
  margin-bottom: .5em;
  margin-top: .5em;
  margin-right: .5em;
  text-align: center;
  user-select: none;
  width: 4em;
}

.c-icon--refresh {
    font-size: 12px;
    padding: .2rem;
}

.control-text{
  padding: .5em;
  user-select: none;
  cursor: pointer;
}

.control-campus-div .control-ui {
    border: 1px solid #caccb8;
}

.control-reset-ui {
    margin-left: auto;
    margin-right: auto;
}

.control-ui--feedback {
  background-color: #a23479; /*#00546e*/
  border-radius: 0.4em;
  color: #fdfdfd;
  font-family: museo-sans,Helvetica,Arial,sans-serif;
  font-size: 0.8rem;
  height: 2.125em;
  margin-bottom: .5em;
  margin-left: 1em;
  margin-top: .5em;

}


/* iPad fix for showing reset button text */
@media (min-width: 768px) and (max-width: 839px) {
    .ipad-fix {
        display: inline-block;
    }
}


.c-btn--selectable__label {
  background-color: #0f3d4c;
  border-bottom: 1px solid #26505d;
  border-right: 1px solid #26505d;
  color: #fff;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
  padding: .5rem 0;
  text-align: center;
  transition: 0s;
  user-select: none;
}

.c-btn--selectable__label .c-icon {
    font-size: 1rem;
    line-height: 1.2;
    margin: 0 0 .2rem 0;
}

.c-btn--selectable__label:last-of-type {
  border-right: 0;
}

.c-btn-group .c-btn:first-of-type.c-btn--medium,
.c-btn-group .c-btn:first-of-type,
.c-btn-group .c-btn:last-of-type.c-btn--medium,
.c-btn-group .c-btn:last-of-type,
.c-btn--selectable__label,
.c-btn--selectable__label:first-of-type,
.c-btn--selectable__label:last-of-type {
  border-radius: 0;
}



@media (min-width:768px) {

  .bar {
      display: none;
  }
  .c-form {
      position: relative;
      left: 0;
      top: 1.25rem;
      padding: 0;
  }
  .c-form__label {
      color: #fff;
  }
  .c-main-header__logo {
      margin-left: 0;
      margin-right: 0;
      float: right;
      padding: 0.5rem 0;
      width: 150px;
  }
  .control-ui {
    width: 8em;
  }
}


/* SNAZZY INFO BOX CHANGES */
.si-content {
  font-family: museo-sans,Helvetica,Arial,sans-serif;
}
.si-content :last-child {
  margin-bottom:0;
}

.si-content-more-link,
.si-content-more-link:visited {
  color: #e4b53c;
  cursor: pointer;
  text-decoration: none;
  text-decoration: underline;
}


/* == ADD TO BASE.SCSS ====================================================== */

input[type=search] {
  box-sizing: border-box;
}

/* ========================================================================== */

/* == ADD TO AUTOCOMPLETE.SCSS ============================================== */
.c-autocomplete {
  position:absolute;
  left:0;
  top:100%;
  z-index:99;
  width:100%;
}
.c-autocomplete__list {
  list-style:none;
  margin:0;
  padding:0;
}
.c-autocomplete__item {
  margin:0;
}
.c-autocomplete__item:nth-of-type(even) .c-autocomplete__link{
  background-color:#f4f6ef;
}
.c-autocomplete__link {
  display:block;
  line-height: 1.1;
  padding: 0.8em 10px;
  background-color:#fff;
  text-decoration:none;
}
.c-autocomplete__item .c-autocomplete__link:hover {
  color:#fff;
  background-color:#006585;
}
.c-autocomplete__item.is-selected .c-autocomplete__link {
  background-color:#333;
  color:#f9f9f9
}
.c-autocomplete__item.is-selected .c-autocomplete__link:hover {
  background-color:#444;
}
.c-autocomplete__title {
  font-weight:bold;
}
.c-autocomplete__subtitle {
  color:#333;
  display:block;
}
.c-autocomplete__item.is-selected .c-autocomplete__subtitle {
  color:#ddd;
}
.c-autocomplete__link:hover .c-autocomplete__subtitle {
  color:#fff;
}

@media (max-width: 767px) and (orientation: portrait) {
     .c-autocomplete {
         width: 155%;
     }
 }

/* ========================================================================== */

.infoPanel {
  background-color: rgba(15,61,76,0.9);
  color: #fff;
  display: none;
  height: calc(100vh - 8.5rem);
  padding: 2rem 1rem;
  width: 0;
  position: absolute;
  left: 0;
  top: 5rem;
  overflow-y: auto;
}
.infoPanel.is-open {
  width:25%;
  display:block;
}

.infoPanel__content a,
.infoPanel__content a:visited {
  color: #e4b53c;
  cursor: pointer;
  text-decoration: none;
  text-decoration: underline;
}

.infoPanel__content a:hover {
    color: #00b3eb;
}

.infoPanel__content p {
    line-height: 1.5;
}


.closeInfoPanel {
  position:absolute;
  top:10px;
  right:13px;
}


/*remove border from formstack iframe*/
.infoPanel__content iframe {
    border: 0;
}

.infoPanel__feedbackTitle {
        padding: .25rem 1rem;
}


@media (min-width: 768px) and (max-width: 1199px) {
  .infoPanel.is-open {
    width:40%;
    display:block;
  }

  .c-form {
      margin: .25rem;
  }

 }



@media (min-width: 768px) and (orientation: portrait) {
    .infoPanel {
      height: calc(100vh - 10rem);
      top: 5rem;
    }
}

@media (min-width: 1024px) and (orientation: portrait) {

    .infoPanel {
      height: calc(100vh - 9.5rem);
  }
}

@media (min-width: 1024px) and (orientation: landscape) {
    .infoPanel {
      height: calc(100vh - 8.5rem);
      top: 5rem;
   }
}

@media (min-width: 1200px) and (orientation: landscape) { /*fixes height issue at around 1200px*/

    .infoPanel {
      height: calc(100vh - 8.5rem);
      top: 5rem;
   }
}

@media (max-width: 767px) {
  .infoPanel {
    border-right: 0;
    position: absolute;
    top:4em;
    min-height: calc(100vh - 7.5rem);
    min-width: 100%;
  }

  .c-btn-group {
       display: flex;
       flex-wrap: wrap;
  }
  .c-btn--selectable__label {
      flex: 1 1 25%;
      font-size: .75em;
      padding: 0;
  }

  .c-form {
      padding: 0;
      margin-top: 1rem;
  }
  .c-main-header__logo {
      margin-top: .5rem;
      width: 130px;
      float: right;
  }

}


@media (max-width: 400px) {
  .c-form {
    padding: 0;
    width: 100%;
  }

  .c-main-header__logo {
      margin-top: 1rem;
  }

  /*.c-btn--selectable__label:not(:first-of-type) {
      word-spacing: 2rem;
  }

  */

  .c-form__input, input[type=text] {
    border: 0;
  }
  .c-form {
      border-top: 1px solid #eee;
  }
  .c-form__input--select:after, .fsSelectParent:after {
    height: 2.4em;
    line-height: 2.6;
  }

}

/* ========================================================================== */
/* Special, permanent points of interest markers */
/* ========================================================================== */

/* The location pointed to by the popup tip. */
.o-poi-item {
    height: 0;
    position: absolute;
    /* The max width of the info window. */
    width: 200px;
}
.o-poi-item.is-hidden {
    visibility: hidden;
}
/* The bubble is anchored above the tip. */
.o-poi-item--anchor {
    position: absolute;
    width: 100%;
    /*bottom: !* TIP_HEIGHT= *! 8px;*/
    bottom: 0;
    left: 0;
}
/* The popup bubble itself. */
.o-poi-item--content {
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(-50%, -50%);
    background-color: #00697A;
    color: #fff;
    padding: 5px;
    overflow-y: auto;
    max-height: 60px;
    text-transform: uppercase;
    font-size: 10px;
    font-family: museo-sans,Helvetica,Arial,sans-serif;
}


/* ========================================================================== */
/* Global alert overlay */
/* ========================================================================== */
.c-alert--overlay {
    position: absolute;
    top: 20px;
    z-index: 999;
    transform: translatex(50%);
    width: 50%;
    opacity: 0.9;
}

